--- a/lang/zh-CN.json
+++ b/lang/zh-CN.json
@@ -1,3 +1,19 @@
 {
-    "test": "测试"
+    "title": "「梦野巡璃」参考资料",
+    "name_family": "梦野",
+    "name_given": "巡璃",
+    "name_family_pron": "ゆめの",
+    "name_given_pron": "めぐり",
+    "refernces": "参考资料",
+    "lang_switch": "日本語",
+    "name": "姓名",
+    "yumeno_meguri": "梦野巡璃",
+    "pronounce": "读音",
+    "yumeno_meguri_pron": "ゆめの めぐり (Yumeno Meguri)",
+    "age": "年龄",
+    "13yo": "13岁",
+    "height": "身高",
+    "145cm": "145cm",
+    "bust": "罩杯",
+    "a_cup": "A"
 }
