--- a/lang/zh-CN.json
+++ b/lang/zh-CN.json
@@ -9,11 +9,21 @@
     "name": "姓名",
     "yumeno_meguri": "梦野巡璃",
     "pronounce": "读音",
-    "yumeno_meguri_pron": "ゆめの めぐり (Yumeno Meguri)",
+    "name_family_pron_en": "Yumeno",
+    "name_given_pron_en": "Meguri",
     "age": "年龄",
-    "13yo": "13岁",
+    "13yo": "13岁・初中二年级",
+    "birthday": "生日",
+    "birthday_date": "10月11日",
     "height": "身高",
     "145cm": "145cm",
     "bust": "罩杯",
-    "a_cup": "A"
+    "a_cup": "A",
+    "eye_color": "瞳色",
+    "hair_style": "发型",
+    "hair_style_val": "披肩双马尾",
+    "hair_color": "发色",
+    "color_help": "仅供参考",
+    "chara": "特征",
+    "chara_val": "单纯、元气的萝莉系少女"
 }
