--- a/lang/ja.json
+++ b/lang/ja.json
@@ -21,7 +21,7 @@
     "eye_color": "瞳の色",
     "hair_style": "髪型",
     "hair_style_val": "ツーサイドアップ",
-    "hair_color": "髪色",
+    "hair_color": "髪の色",
     "color_help": "ご参考まで",
     "chara": "特徴",
     "chara_val": "清楚で元気なロリっぽい少女"
