Menu, background and side character

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -5,6 +5,8 @@
     "name_family_pron": "ゆめの",
     "name_given_pron": "めぐり",
     "refernces": "参考資料",
+    "setting": "設定資料",
+    "go_back": "ホーム",
     "lang_switch": "中文",
     "name": "名前",
     "yumeno_meguri": "夢野 巡璃",
