--- a/lang/zh-CN.json
+++ b/lang/zh-CN.json
@@ -5,6 +5,8 @@
     "name_family_pron": "ゆめの",
     "name_given_pron": "めぐり",
     "refernces": "参考资料",
+    "setting": "设定资料",
+    "go_back": "返回主站",
     "lang_switch": "日本語",
     "name": "姓名",
     "yumeno_meguri": "梦野巡璃",
